Changed image sources

--- a/index.html
+++ b/index.html
@@ -126,7 +126,14 @@
           data-aos="fade-left"
           data-aos-duration="1000"
         >
-          <img class="u-max-full-width" src="images/stock-us.jpg" />
+          <picture>
+            <source media="(min-width: 768px)" srcset="images/stock-us.jpg" />
+            <img
+              class="u-max-full-width"
+              src="images/stock-us-sm.jpg"
+              alt="Caretaker and resident"
+            />
+          </picture>
         </div>
       </div>
 
@@ -284,10 +291,14 @@
         data-aos-offset="200"
       >
         <div class="one-third column">
-          <img
-            class="u-max-full-width"
-            src="images/pexels-andrea-piacquadio-3768131.jpg"
-          />
+          <picture>
+            <source media="(min-width: 768px)" srcset="images/stock.jpg" />
+            <img
+              class="u-max-full-width"
+              src="images/stock.jpg"
+              alt="Caretaker and resident"
+            />
+          </picture>
         </div>
         <div class="two-thirds column">
           <h2 class="motto">
